--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "robofriends",
+  "homepage": "https://ssanudin.github.com/robofriends",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,12 +14,12 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -38,7 +39,6 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://github.com/ssanudin/robofriends",
   "devDependencies": {
     "gh-pages": "^3.2.3"
   }
